Update Hyprland & Waybar styling

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,7 +6,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = hyprpaper
-exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc
+exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config/hypr/waybar/style.css
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
@@ -61,8 +61,8 @@ decoration {
     
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 2
     }
 
     drop_shadow = yes
@@ -148,16 +148,26 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod SHIFT, D, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -m region
-bind = $mainMod, E, exec, dolphin
+# bind = $mainMod, E, exec, dolphin
 bind = $mainMod, SPACE, togglefloating, 
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, E, togglesplit, # dwindle
+
+# Resize bindings
+bind = $mainMod, R, submap, resize
+submap=resize
+bind=,l,resizeactive,50 0
+bind=,h,resizeactive,-50 0
+bind=,k,resizeactive,0 -50
+bind=,j,resizeactive,0 50
+bind=,escape,submap,reset 
+submap=reset
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
+bind = $mainMod, J, movefocus, d
 bind = $mainMod, K, movefocus, u
-bind = $mainMod, V, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
