--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,9 +18,10 @@ exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_snele
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-# env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,MyCursor
-env = HYPRCURSOR_SIZE,48
+env = GTK_THEME,gnome:dark
+env = XCURSOR_SIZE,88
+#env = HYPRCURSOR_THEME,MyCursor
+#env = HYPRCURSOR_SIZE,48
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -42,8 +43,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 1
+    gaps_out =  0
     border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -57,7 +58,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 5
     
     blur {
         enabled = true
@@ -83,13 +84,14 @@ animations {
     animation = border, 1, 4, default
     animation = borderangle, 1, 4, default
     animation = fade, 1, 4, default
-    animation = workspaces, 1, 4, default
+    animation = workspaces, 1, 2.5, default
 }
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+    no_gaps_when_only = 1
 }
 
 master {
@@ -130,11 +132,11 @@ workspace = 2, monitor:HDMI-A-2
 workspace = 3, monitor:HDMI-A-2
 workspace = 4, monitor:HDMI-A-2
 workspace = 5, monitor:HDMI-A-2
-workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:HDMI-A-1
-workspace = 8, monitor:HDMI-A-1
-workspace = 9, monitor:HDMI-A-1
-workspace = 10, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-4
+workspace = 7, monitor:HDMI-A-4
+workspace = 8, monitor:HDMI-A-4
+workspace = 9, monitor:HDMI-A-4
+workspace = 10, monitor:HDMI-A-4
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
