--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
 exec-once = hyprctl dispatch exec [workspace 3 silent] slack
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
+exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
 exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
 
 # Source a file (multi-file configs)
@@ -127,16 +128,16 @@ windowrule = workspace 10, ^(jetbrains-rider)$
 
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # workspace = 3, rounding:false, decorate:false, gapsin:50, gapsout:50
-workspace = 1, monitor:HDMI-A-2
-workspace = 2, monitor:HDMI-A-2
-workspace = 3, monitor:HDMI-A-2
-workspace = 4, monitor:HDMI-A-2
-workspace = 5, monitor:HDMI-A-2
-workspace = 6, monitor:HDMI-A-4
-workspace = 7, monitor:HDMI-A-4
-workspace = 8, monitor:HDMI-A-4
-workspace = 9, monitor:HDMI-A-4
-workspace = 10, monitor:HDMI-A-4
+workspace = 1, monitor:desc:Iiyama North America PL2493H 1211430119375
+workspace = 2, monitor:desc:Iiyama North America PL2493H 1211430119375
+workspace = 3, monitor:desc:Iiyama North America PL2493H 1211430119375
+workspace = 4, monitor:desc:Iiyama North America PL2493H 1211430119375
+workspace = 5, monitor:desc:Iiyama North America PL2493H 1211430119375
+workspace = 6, monitor:desc:Iiyama North America PL2493H 1211430119367
+workspace = 7, monitor:desc:Iiyama North America PL2493H 1211430119367
+workspace = 8, monitor:desc:Iiyama North America PL2493H 1211430119367
+workspace = 9, monitor:desc:Iiyama North America PL2493H 1211430119367
+workspace = 10, monitor:desc:Iiyama North America PL2493H 1211430119367
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -154,6 +155,7 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region
 bind = $mainMod, SPACE, togglefloating, 
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
 
 # Resize bindings
 bind = $mainMod, R, submap, resize
