Add environment based Hyprland configuration

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,13 +10,10 @@ exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
-exec-once = hyprctl dispatch exec [workspace 3 silent] slack
-exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
-exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
-exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
 
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+# source = ~/.config/hypr/$USERNAME.conf
+source = ~/.config/hypr/$MY_ENVIRONMENT.conf
 
 # Some default env vars.
 env = GTK_THEME,gnome:dark
