--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
 preload = ~/.config/hypr/wallpaper.png
 
-wallpaper = desc:Iiyama North America PL2493H 1211430119375,contain:~/.config/hypr/wallpaper.png
-wallpaper = desc:Iiyama North America PL2493H 1211430119367,contain:~/.config/hypr/wallpaper.png
+wallpaper = desc:Iiyama North America PL2493H 1211430119375,contain:~/.config/hypr/wallpaper1.png
+wallpaper = desc:Iiyama North America PL2493H 1211430119367,contain:~/.config/hypr/wallpaper1.png
