Finish hyprland configuration management on multiple computers

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,8 +12,7 @@ exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
 
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/$USERNAME.conf
-source = ~/.config/hypr/$MY_ENVIRONMENT.conf
+source = ~/.config/hypr/$MYENV.conf
 
 # Some default env vars.
 env = GTK_THEME,gnome:dark
@@ -169,6 +168,12 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, K, movefocus, u
+
+# Move active window to direction
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
