--- a/hypr/work.conf
+++ b/hypr/work.conf
@@ -1,1 +1,4 @@
-
+exec-once = hyprctl dispatch exec [workspace 3 silent] slack
+exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
+exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
+exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
