--- a/hypr/home.conf
+++ b/hypr/home.conf
@@ -1,1 +1,11 @@
+workspace = 1, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
+workspace = 2, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
+workspace = 3, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
+workspace = 4, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
+workspace = 5, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
+workspace = 6, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 7, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 8, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 9, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 10, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
 
