--- a/hypr/waybar/config.jsonc
+++ b/hypr/waybar/config.jsonc
@@ -68,17 +68,17 @@
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% {icon} {format_source}",
-    "format-bluetooth": "{volume}% {icon} {format_source}",
-    "format-bluetooth-muted": " {icon} {format_source}",
-    "format-muted": " {format_source}",
+    "format": "{volume}%",
+    "format-muted": "0%",
+    "format-bluetooth": "{volume}%",
+    "format-bluetooth-muted": "0%",
     "format-icons": {
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "portable": "",
-      "car": "",
+      // "headphone": "",
+      // "hands-free": "",
+      // "headset": "",
+      // "phone": "",
+      // "portable": "",
+      // "car": "",
       "default": [
         "",
         "",
