--- a/hypr/work.conf
+++ b/hypr/work.conf
@@ -1,3 +1,5 @@
+monitor=desc:Iiyama North America PL2493H 1211430119375,preferred,0x0,auto
+
 exec-once = hyprctl dispatch exec [workspace 3 silent] slack
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
