--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -113,6 +113,7 @@ misc {
 
 windowrule = workspace 1, ^(.*Brave.*)$
 windowrule = workspace 10, ^(jetbrains-rider)$
+windowrule = float, title:^(overskride)(.*)$
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
