--- a/hypr/waybar/config.jsonc
+++ b/hypr/waybar/config.jsonc
@@ -16,6 +16,7 @@
     "hyprland/workspaces"
   ],
   "modules-right": [
+    "custom/bluetooth-gui",
     "pulseaudio",
     // "keyboard-state",
     "clock"
@@ -65,6 +66,10 @@
     "format": "{:%H:%M %d-%m-%Y}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     "format-alt": "{:%Y-%m-%d}"
+  },
+  "custom/bluetooth-gui": {
+    "format": "Bluetooth",
+    "on-click": "overskride"
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
