--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -1,6 +1,6 @@
 [manager]
 layout         = [ 1, 3, 4 ]
-sort_by        = "alphabetical"
+sort_by        = "natural"
 sort_sensitive = false
 sort_reverse   = false
 sort_dir_first = true
