Work Hyprland setup improvements

--- a/hypr/work.conf
+++ b/hypr/work.conf
@@ -1,6 +1,13 @@
-monitor=desc:Iiyama North America PL2493H 1211430119375,preferred,0x0,auto
+monitor=desc:Iiyama North America PL2493H 1211430119375,1920x1080@74.97,0x0,auto
+monitor=desc:Iiyama North America PL2493H 1211430119367,1920x1080@74.97,1920x0,auto
+monitor=HEADLESS,2560x1440@60,3840x0,auto
+
+# https://wiki.hypr.land/Configuring/Multi-GPU/
+env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 exec-once = hyprctl dispatch exec [workspace 3 silent] slack
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
 exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
+exec-once = wayvnc 0.0.0.0 -o HEADLESS
+
