--- a/helix/config.toml
+++ b/helix/config.toml
@@ -7,6 +7,10 @@ mouse = false
 bufferline = "multiple"
 color-modes = true
 completion-trigger-len = 1      # min-lenght to start auto-completion
+end-of-line-diagnostics = "hint"
+
+[editor.inline-diagnostics]
+cursor-line = "warning" # show warnings and errors on the cursorline inline
 
 [keys.normal]
 "C-r"  = ":reload"
