--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@ exec-once = hyprpaper
 exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config/hypr/waybar/style.css
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
-exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
+exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md ./TODO.md --vsplit && bash"'
 # Focus correct workspaces on start-up
 exec-once = hyprctl dispatch workspace 1
 exec-once = hyprctl dispatch workspace 10
