--- a/hypr/work.conf
+++ b/hypr/work.conf
@@ -9,5 +9,6 @@ exec-once = hyprctl dispatch exec [workspace 3 silent] slack
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi'
 exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-directory ~/Documents/_sneleentaxi/src/WebApp -e bash -c "npm run start"'
 exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
-exec-once = wayvnc 0.0.0.0 -o HEADLESS
+exec-once = hyprctl output create headless "HEADLESS" && wayvnc 0.0.0.0 -o HEADLESS
+# exec-once = wayvnc 0.0.0.0 -o HEADLESS 2>&1 > ~/somelog.txt
 
