Update Hyprland monitor configuration home

--- a/hypr/home.conf
+++ b/hypr/home.conf
@@ -1,11 +1,14 @@
-workspace = 1, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
-workspace = 2, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
-workspace = 3, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
-workspace = 4, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
-workspace = 5, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001763
-workspace = 6, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
-workspace = 7, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
-workspace = 8, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
-workspace = 9, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
-workspace = 10, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+monitor=desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408,2560x1440@180.00000,auto,auto
+monitor=desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132,2560x1440@180.00000,auto,auto
+
+workspace = 1, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 2, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 3, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 4, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 5, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
+workspace = 6, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132
+workspace = 7, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132
+workspace = 8, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132
+workspace = 9, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132
+workspace = 10, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132
 
