--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,15 +9,15 @@ exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md && bash"'
+# Focus correct workspaces on start-up
+exec-once = hyprctl dispatch workspace 1
+exec-once = hyprctl dispatch workspace 10
 
 # Source a file (multi-file configs)
 source = ~/.config/hypr/$MYENV.conf
 
 # Some default env vars.
 env = GTK_THEME,gnome:dark
-env = XCURSOR_SIZE,88
-#env = HYPRCURSOR_THEME,MyCursor
-#env = HYPRCURSOR_SIZE,48
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
