--- a/helix/config.toml
+++ b/helix/config.toml
@@ -8,6 +8,7 @@ bufferline = "multiple"
 color-modes = true
 completion-trigger-len = 1      # min-lenght to start auto-completion
 end-of-line-diagnostics = "hint"
+line-number = "relative"
 
 [editor.auto-pairs]
 '(' = ')'
