Refactor nix files - Refactor nix files - Add hyprland submap "remote" - Add NextDNS - fix hyprland windowrule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -115,8 +115,8 @@ misc {
 #    sensitivity = -0.5
 #}
 
-windowrule = workspace 1, ^(.*Brave.*)$
-windowrule = workspace 10, ^(jetbrains-rider)$
+windowrule = workspace 1, title:^(.*Brave.*)$
+windowrule = workspace 10, title:^(jetbrains-rider)$
 windowrule = float, title:^(overskride)(.*)$
 
 # No border when only application on screen
@@ -159,9 +159,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod SHIFT, D, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -m region
-# bind = $mainMod, E, exec, dolphin
 bind = $mainMod, SPACE, togglefloating, 
-# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 
@@ -222,3 +220,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bind = SUPER SHIFT, p, submap, remote
+submap=remote
+bind = SUPER SHIFT, p, submap, reset
+submap=reset
