--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -155,6 +155,8 @@ $mainMod = SUPER
 bind = $mainMod, N, exec, alacritty
 bind = $mainMod, O, exec, wofi --show drun --conf ~/.config/hypr/wofi/config
 bind = $mainMod, Q, killactive, 
+bind =         , code:122, exec, pamixer -d 5
+bind =         , code:123, exec, pamixer -i 5
 
 bind = $mainMod, M, exit, 
 bind = $mainMod SHIFT, D, exec, hyprlock
