--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -173,6 +173,17 @@ bind=,j,resizeactive,0 50
 bind=,escape,submap,reset 
 submap=reset
 
+# Settings bindings
+bind = $mainMod, code:59, exec, eww open-many folders profile system clock uptime
+bind = $mainMod, code:59, submap, dashboard
+submap=dashboard
+bind = $mainMod, code:59, exec, eww close folders profile system clock uptime
+bind = ,escape, exec, eww close folders profile system clock uptime
+bind = $mainMod, code:59, submap, reset 
+bind = ,escape, submap, reset 
+submap=reset
+
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
