--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,12 +28,18 @@ input {
     kb_rules =
 
     follow_mouse = 1
+    mouse_refocus = false
+
 
     touchpad {
         natural_scroll = no
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+
+cursor {
+    no_hardware_cursors = false            
 }
 
 general {
@@ -116,8 +122,6 @@ misc {
 #}
 
 windowrule = workspace 1, title:^(.*Brave.*)$
-windowrule = workspace 10, title:^(jetbrains-rider)$
-windowrule = float, title:^(overskride)(.*)$
 
 # No border when only application on screen
 workspace = w[tv1], gapsout:0, gapsin:0
