--- a/hypr/work.conf
+++ b/hypr/work.conf
@@ -14,3 +14,14 @@ exec-once = hyprctl dispatch exec [workspace 9 silent] 'alacritty --working-dire
 exec-once = hyprctl dispatch exec [workspace 10 silent] rider ~/Documents/_sneleentaxi/Sneleentaxi.sln
 exec-once = hyprctl output create headless "HEADLESS" && wayvnc 0.0.0.0
 
+windowrule = workspace 10, title:^(jetbrains-rider)$
+# fix tooltips (always have a title of `win.<id>`)
+windowrulev2 = tag +jb, class:^jetbrains-.+$,floating:1
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+# fix tab dragging (always have a single space character as their title)
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+# windowrulev2 = stayfocused, title:^(jetbrains-rider)$
+# windowrulev2 = center, class:^(jetbrains-rider)$
+# windowrule = workspace 10, class:^(jetbrains-rider)$
