--- a/hypr/home.conf
+++ b/hypr/home.conf
@@ -1,4 +1,4 @@
-monitor=desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408,2560x1440@180.00000,auto,auto
+monitor=desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408,2560x1440@180.00000,2560x0,auto
 monitor=desc:ASUSTek COMPUTER INC VG27AQ3A SBLMAS011132,2560x1440@180.00000,auto,auto
 
 workspace = 1, monitor:desc:ASUSTek COMPUTER INC VG27AQ3A RCLMAS001408
