wofi to vicinae

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,6 +5,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = hyprpaper
+exec-once = vicinae server
 exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config/hypr/waybar/style.css
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
@@ -122,6 +123,10 @@ misc {
 #}
 
 windowrule = workspace 1, title:^(.*Brave.*)$
+windowrule = float, dimaround, size 75% 75%, class:com.gabm.satty
+layerrule = blur, vicinae
+layerrule = ignorealpha 0, vicinae
+layerrule = noanim, vicinae
 
 # No border when only application on screen
 workspace = w[tv1], gapsout:0, gapsin:0
@@ -157,14 +162,15 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, N, exec, alacritty
-bind = $mainMod, O, exec, wofi --show drun --conf ~/.config/hypr/wofi/config
+bind = $mainMod, O, exec, vicinae toggle
+bind = $mainMod, V, exec, vicinae vicinae://extensions/vicinae/clipboard/history
 bind = $mainMod, Q, killactive, 
 bind =         , code:122, exec, pamixer -d 5
 bind =         , code:123, exec, pamixer -i 5
 
 bind = $mainMod, M, exit, 
 bind = $mainMod SHIFT, D, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, hyprshot -m region
+bind = $mainMod SHIFT, S, exec, hyprshot -m region --freeze --raw | satty --filename - --output-filename ~/Pictures/Screenshots/%y%m%d-%H%M%S.png
 bind = $mainMod, SPACE, togglefloating, 
 bind = $mainMod, E, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
@@ -178,17 +184,6 @@ bind=,k,resizeactive,0 -50
 bind=,j,resizeactive,0 50
 bind=,escape,submap,reset 
 submap=reset
-
-# Settings bindings
-bind = $mainMod, code:59, exec, eww open-many folders profile system clock uptime
-bind = $mainMod, code:59, submap, dashboard
-submap=dashboard
-bind = $mainMod, code:59, exec, eww close folders profile system clock uptime
-bind = ,escape, exec, eww close folders profile system clock uptime
-bind = $mainMod, code:59, submap, reset 
-bind = ,escape, submap, reset 
-submap=reset
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
