Waybar to Ashell

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,7 +6,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 exec-once = hyprpaper
 exec-once = vicinae server
-exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config/hypr/waybar/style.css
+exec-once = ashell --config-path ~/.config/hypr/ashell/config.toml
 
 exec-once = hyprctl dispatch exec [workspace 1 silent] brave
 exec-once = hyprctl dispatch exec [workspace 2 silent] 'alacritty --working-directory ~/Documents/_doc -e bash -c "hx ./README.md ./TODO.md --vsplit && bash"'
@@ -168,7 +168,6 @@ bind = $mainMod, Q, killactive,
 bind =         , code:122, exec, pamixer -d 5
 bind =         , code:123, exec, pamixer -i 5
 
-bind = $mainMod, M, exit, 
 bind = $mainMod SHIFT, D, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -m region --freeze --raw | satty --filename - --output-filename ~/Pictures/Screenshots/%y%m%d-%H%M%S.png
 bind = $mainMod, SPACE, togglefloating, 
